--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,96 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="../js-tut/43.js"></script>
+    <!-- <script src="../js-tut/1.js"></script> -->
+    <!-- <script src="../js-tut/2.js"></script> -->
+    <!-- <script src="../js-tut/3.js"></script> -->
+    <!-- <script src="../js-tut/4.js"></script> -->
+    <!-- <script src="../js-tut/5.js"></script> -->
+    <!-- <script src="../js-tut/6.js"></script> -->
+    <!-- <script src="../js-tut/7.js"></script> -->
+    <!-- <script src="../js-tut/8.js"></script> -->
+    <!-- <script src="../js-tut/9.js"></script> -->
+    <!-- <script src="../js-tut/10.js"></script> -->
+    <!-- <script src="../js-tut/11.js"></script> -->
+    <!-- <script src="../js-tut/12.js"></script> -->
+    <!-- <script src="../js-tut/13.js"></script> -->
+    <!-- <script src="../js-tut/14.js"></script> -->
+    <!-- <script src="../js-tut/15.js"></script> -->
+    <!-- <script src="../js-tut/16.js"></script> -->
+    <!-- <script src="../js-tut/17.js"></script> -->
+    <!-- <script src="../js-tut/18.js"></script> -->
+    <!-- <script src="../js-tut/19.js"></script> -->
+    <!-- <script src="../js-tut/20.js"></script> -->
+    <!-- <script src="../js-tut/21.js"></script> -->
+    <!-- <script src="../js-tut/22.js"></script> -->
+    <!-- <script src="../js-tut/23.js"></script> -->
+    <!-- <script src="../js-tut/24.js"></script> -->
+    <!-- <script src="../js-tut/25.js"></script> -->
+    <!-- <script src="../js-tut/26.js"></script> -->
+    <!-- <script src="../js-tut/27.js"></script> -->
+    <!-- <script src="../js-tut/28.js"></script> -->
+    <!-- <script src="../js-tut/29.js"></script> -->
+    <!-- <script src="../js-tut/30.js"></script> -->
+    <!-- <script src="../js-tut/31.js"></script> -->
+    <!-- <script src="../js-tut/32.js"></script> -->
+    <!-- <script src="../js-tut/33.js"></script> -->
+    <!-- <script src="../js-tut/34.js"></script> -->
+    <!-- <script src="../js-tut/35.js"></script> -->
+    <!-- <script src="../js-tut/36.js"></script> -->
+    <!-- <script src="../js-tut/37.js"></script> -->
+    <!-- <script src="../js-tut/38.js"></script> -->
+    <!-- <script src="../js-tut/39.js"></script> -->
+    <!-- <script src="../js-tut/40.js"></script> -->
+    <!-- <script src="../js-tut/41.js"></script> -->
+    <!-- <script src="../js-tut/42.js"></script> -->
+    <!-- <script src="../js-tut/43.js"></script> -->
+    <!-- <script src="../js-tut/44.js"></script> -->
+    <!-- <script src="../js-tut/45.js"></script> -->
+    <!-- <script src="../js-tut/46.js"></script> -->
+    <!-- <script src="../js-tut/47.js"></script> -->
+    <!-- <script src="../js-tut/48.js"></script> -->
+    <!-- <script src="../js-tut/49.js"></script> -->
+    <!-- <script src="../js-tut/50.js"></script> -->
+    <!-- <script src="../js-tut/51.js"></script> -->
+    <!-- <script src="../js-tut/52.js"></script> -->
+    <!-- <script src="../js-tut/53.js"></script> -->
+    <!-- <script src="../js-tut/54.js"></script> -->
+    <!-- <script src="../js-tut/55.js"></script> -->
+    <!-- <script src="../js-tut/56.js"></script> -->
+    <!-- <script src="../js-tut/57.js"></script> -->
+    <!-- <script src="../js-tut/58.js"></script> -->
+    <!-- <script src="../js-tut/59.js"></script> -->
+    <!-- <script src="../js-tut/60.js"></script> -->
+    <!-- <script src="../js-tut/61.js"></script> -->
+    <!-- <script src="../js-tut/62.js"></script> -->
+    <!-- <script src="../js-tut/63.js"></script> -->
+    <!-- <script src="../js-tut/64.js"></script> -->
+    <!-- <script src="../js-tut/65.js"></script> -->
+    <!-- <script src="../js-tut/66.js"></script> -->
+    <!-- <script src="../js-tut/67.js"></script> -->
+    <!-- <script src="../js-tut/68.js"></script> -->
+    <!-- <script src="../js-tut/69.js"></script> -->
+    <!-- <script src="../js-tut/70.js"></script> -->
+    <!-- <script src="../js-tut/71.js"></script> -->
+    <!-- <script src="../js-tut/72.js"></script> -->
+    <!-- <script src="../js-tut/73.js"></script> -->
+    <!-- <script src="../js-tut/74.js"></script> -->
+    <!-- <script src="../js-tut/75.js"></script> -->
+    <!-- <script src="../js-tut/76.js"></script> -->
+    <!-- <script src="../js-tut/77.js"></script> -->
+    <!-- <script src="../js-tut/78.js"></script> -->
+    <!-- <script src="../js-tut/79.js"></script> -->
+    <!-- <script src="../js-tut/80.js"></script> -->
+    <!-- <script src="../js-tut/81.js"></script> -->
+    <!-- <script src="../js-tut/82.js"></script> -->
+    <!-- <script src="../js-tut/83.js"></script> -->
+    <!-- <script src="../js-tut/84.js"></script> -->
+    <!-- <script src="../js-tut/85.js"></script> -->
+    <!-- <script src="../js-tut/86.js"></script> -->
+    <!-- <script src="../js-tut/87.js"></script> -->
+    <!-- <script src="../js-tut/88.js"></script> -->
+    <!-- <script src="../js-tut/89.js"></script> -->
+    <!-- <script src="../js-tut/90.js"></script> -->
+    <script src="../js-tut/91.js"></script>
   </body>
 </html>
